--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -293,55 +293,55 @@
 			</trans-unit>
 			<trans-unit id="email.subscription" resname="email.subscription">
 				<source>Newsletter subscription</source>
-				<target>xxx</target>
+				<target>Inscription à l'infolettre</target>
 			</trans-unit>
 			<trans-unit id="email.pleaseVerify" resname="email.pleaseVerify">
-				<source>you need to click at the verify link to verify your email-address:</source>
-				<target>xxx</target>
+				<source>you need to click on the verify link to verify your email-address:</source>
+				<target>Cliquez sur le lien suivant pour confirmer votre adresse courriel</target>
 			</trans-unit>
 			<trans-unit id="email.alternative" resname="email.alternative">
 				<source>Alternatively, you can also click on this button</source>
-				<target>xxx</target>
+				<target>Vous pouvez aussi cliquez sur ce bouton</target>
 			</trans-unit>
 			<trans-unit id="email.bestRegards" resname="email.bestRegards">
 				<source>Best regards</source>
-				<target>xxx</target>
+				<target>Cordialement</target>
 			</trans-unit>
 			<trans-unit id="email.unsubscription" resname="email.unsubscription">
 				<source>Newsletter unsubscription</source>
-				<target>xxx</target>
+				<target>Désinscription de l'infolettre</target>
 			</trans-unit>
 			<trans-unit id="email.pleaseVerifyUnsubscription" resname="email.pleaseVerifyUnsubscription">
 				<source>you need to click at the verify link to verify your unsubscription:</source>
-				<target>xxx</target>
+				<target>Cliquez sur le lien suivant pour confirmer votre désinscription</target>
 			</trans-unit>
 			<trans-unit id="email.subscribedSuccess" resname="email.subscribedSuccess">
 				<source>You have just successfully registered for our newsletter.</source>
-				<target>xxx</target>
+				<target>Vous êtes maintenant inscrit à notre infolettre</target>
 			</trans-unit>
 			<trans-unit id="email.unsubscribedSuccess" resname="email.unsubscribedSuccess">
 				<source>you are now unsubscribed from our newsletter.</source>
-				<target>xxx</target>
+				<target>Vous êtes à présent désinscrit de notre infolettre</target>
 			</trans-unit>
 			<trans-unit id="email.usedEmail" resname="email.usedEmail">
 				<source>Used email-address:</source>
-				<target>xxx</target>
+				<target>Courriel utilisé:</target>
 			</trans-unit>
 			<trans-unit id="email.name" resname="email.name">
 				<source>Name:</source>
-				<target>xxx</target>
+				<target>Nom:</target>
 			</trans-unit>
 			<trans-unit id="email.toAdminWantsTo" resname="email.toAdminWantsTo">
 				<source>this user wants to subscribe or to unsubscribe:</source>
-				<target>xxx</target>
+				<target>Cet utilisateur souhaite s'inscrire ou de désinscrire</target>
 			</trans-unit>
 			<trans-unit id="email.toAdminSubscribed" resname="email.toAdminSubscribed">
 				<source>this user has just subscribed to the newsletter:</source>
-				<target>xxx</target>
+				<target>Cet utilisateur vient de s'inscrire' de l'infolettre</target>
 			</trans-unit>
 			<trans-unit id="email.toAdminUnsubscribed" resname="email.toAdminUnsubscribed">
 				<source>this user has just unsubscribed from the newsletter:</source>
-				<target>xxx</target>
+				<target>Cet utilisateur vient de se désinscrire de l'infolettre</target>
 			</trans-unit>
 		</body>
 	</file>
