--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -223,7 +223,7 @@
 				<source>Newsletter subscription</source>
 			</trans-unit>
 			<trans-unit id="email.pleaseVerify" resname="email.pleaseVerify">
-				<source>you need to click at the verify link to verify your email-address:</source>
+				<source>you need to click on the verify link to verify your email-address:</source>
 			</trans-unit>
 			<trans-unit id="email.alternative" resname="email.alternative">
 				<source>Alternatively, you can also click on this button</source>
@@ -235,7 +235,7 @@
 				<source>Newsletter unsubscription</source>
 			</trans-unit>
 			<trans-unit id="email.pleaseVerifyUnsubscription" resname="email.pleaseVerifyUnsubscription">
-				<source>you need to click at the verify link to verify your unsubscription:</source>
+				<source>you need to click on the verify link to verify your unsubscription:</source>
 			</trans-unit>
 			<trans-unit id="email.subscribedSuccess" resname="email.subscribedSuccess">
 				<source>You have just successfully registered for our newsletter.</source>
